--- a/src/templates/dashboard/assign_task.html
+++ b/src/templates/dashboard/assign_task.html
@@ -243,4 +243,8 @@
         </div>
     </div>
 </div>
+<script>
+    task_management = document.getElementById('task_management')
+    task_management.classList.add('text-blue-500')
+</script>
 {% endblock %}
