--- a/src/templates/dashboard/record_audio.html
+++ b/src/templates/dashboard/record_audio.html
@@ -49,4 +49,8 @@
       </div>
     </div>
   </div>
+  <script>
+    audio_management = document.getElementById('audio_management')
+    audio_management.classList.add('text-blue-500')
+  </script>
 {% endblock %}
