--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -27,11 +27,6 @@
       </div>
       {% if current_user.is_authenticated %}
         <div class="flex flex-row space-x-5 items-center">
-          <div>
-            <a href=""><p>Remaining tasks: <span class="bg-yellow-500 py-1 px-3 text-white rounded-md">
-              20/20
-            </span></p></a>
-          </div>
           <div class="flex flex-row space-x-2 items-center border rounded-md px-3 py-1 hover:bg-white hover:text-gray-700">
             <div>
               <i class="fa-solid fa-circle-user"></i>
@@ -76,7 +71,8 @@
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
         {% for category, message in messages %}
-        <div class="flex-row item-center justify-between alert bg-red-200 rounded-lg py-3 px-10 mb-3 text-center text-red-700 inline-flex items-center w-full alert-dismissible fade show" role="alert">
+        {% if category == 'success' %}
+        <div class="flex-row item-center justify-between alert bg-green-200 py-3 px-10 mb-3 text-center text-green-700 inline-flex items-center w-full alert-dismissible fade show" role="alert">
           <div class="flex flex-row space-x-3 items-center">
             <div>
               <i class="fa-solid fa-circle-xmark"></i>
@@ -85,8 +81,21 @@
               {{message}}
             </div>
           </div>
-          <div><button type="button" class="btn-close box-content w-4 h-4 p-1 ml-auto text-red-900 border-none rounded-none opacity-50 focus:shadow-none focus:outline-none focus:opacity-100 hover:text-yellow-900 hover:opacity-75 hover:no-underline" data-bs-dismiss="alert" aria-label="Close">&#x274C;</button></div>
+          <div><button type="button" class="btn-close box-content w-4 h-4 p-1 ml-auto text-green-900 border-none rounded-none opacity-50 focus:shadow-none focus:outline-none focus:opacity-100 hover:text-yellow-900 hover:opacity-75 hover:no-underline" data-bs-dismiss="alert" aria-label="Close"></button></div>
         </div>
+        {% else %}
+        <div class="flex-row item-center justify-between alert bg-red-200 py-3 px-10 mb-3 text-center text-red-700 inline-flex items-center w-full alert-dismissible fade show" role="alert">
+          <div class="flex flex-row space-x-3 items-center">
+            <div>
+              <i class="fa-solid fa-circle-xmark"></i>
+            </div>
+            <div>
+              {{message}}
+            </div>
+          </div>
+          <div><button type="button" class="btn-close box-content w-4 h-4 p-1 ml-auto text-red-900 border-none rounded-none opacity-50 focus:shadow-none focus:outline-none focus:opacity-100 hover:text-yellow-900 hover:opacity-75 hover:no-underline" data-bs-dismiss="alert" aria-label="Close"></button></div>
+        </div>
+        {% endif %}
       {% endfor %}
       {% endif %}
     {% endwith %}
